add google fonts

--- a/_posts/2021-10-25-eof-gr.md
+++ b/_posts/2021-10-25-eof-gr.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title:  Το Sanosil Super 25 Ag αδειοδοτήθηκε από τον ΕΟΦ
+title:  Demo - Αδειοδότηση Sanosil Super 25 από ΕΟΦ
 lang: el
 main-image: /uploads/sanosils25-water.jpg
 ---
 
-Sanosil Super 25
+Στις 25 Οκτωβρίου 2021, το Sanosil Super 25 αδειοδοτήθηκε από τον ΕΟΦ για χρήση __________________________.
 
 Το Sanosil Super 25 είναι ένα υψηλά συμπυκνωμένο απολυμαντικό μακράς διαρκείας (2 χρόνια). Αποτελεί το κύριο προϊόν της σειράς Sanosil με υπεροξείδιο του υδρογόνου (H2O2) και άργυρο (Ag), καθώς τα υπόλοιπα (S015, S010, S003) είναι ουσιαστικά διαλύσεις του.
 
 Ενδείκνυται για επαγγελματίες χρήστες που ξέρουν πως να το αραιώσουν σύμφωνα με τις οδηγίες της Sanosil AG.
 
-Διαβάστε περισσότερα για το πως δουλεύει Sanosil Super 25 και τα παράγωγά του.
+[Διαβάστε περισσότερα για το πως δουλεύει Sanosil Super 25 και οι διαλύσεις του.](/{{page.lang}}/sanosil)
