--- a/_posts/2021-10-25-eof-gr.md
+++ b/_posts/2021-10-25-eof-gr.md
@@ -2,7 +2,7 @@
 layout: post
 title:  Demo - Αδειοδότηση Sanosil Super 25 από ΕΟΦ
 lang: el
-main-image: /uploads/sanosils25-water.jpg
+image: /assets/theeta-sanosil-meta-6x4.jpg
 ---
 
 Στις 25 Οκτωβρίου 2021, το Sanosil Super 25 αδειοδοτήθηκε από τον ΕΟΦ για χρήση __________________________.
